5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1664_2967.log
== TEST (2019-04-16 10:20:00) 
-- CODE:
a1= float(input("insira sua altura: "))
a2= float(input("insira a altura do amigo: "))
if a1 or a2 >=1.37:
	print("Sim")
else:
	print("Nao")
print(max(a1,a2))
-- OUTPUT:
Sim
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:20:23) 
-- CODE:
a1= float(input("insira sua altura: "))
a2= float(input("insira a altura do amigo: "))
if a1 or a2 >=1.37:
	print("Sim")
else:
	print("Nao")
print(max(a1,a2))
-- OUTPUT:
Sim
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:20:38) 
-- CODE:
a1= float(input("insira sua altura: "))
a2= float(input("insira a altura do amigo: "))
if a1 or a2 >=1.37:
	print("Sim")
else:
	print("Nao")
print(max(a1,a2))
-- OUTPUT:
Sim
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:21:19) 
-- CODE:
a1= float(input("insira sua altura: "))
a2= float(input("insira a altura do amigo: "))
if a1 or a2 >=1.37:
	print("Sim")
else:
	print("Nao")
print(max(a1,a2))
-- OUTPUT:
Sim
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:22:06) 
-- CODE:
a1= float(input("insira sua altura: "))
a2= float(input("insira a altura do amigo: "))
if a1 or a2 >=1.37:
	print("Sim")
if a1 or a2 <1.37:
	print("Nao")
print(max(a1,a2))
-- OUTPUT:
Sim
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:25:04) 
-- CODE:
a1= float(input("insira sua altura: "))
a2= float(input("insira a altura do amigo: "))
if a1>= 1.37:
	print("Sim")
if a2>=1.37:
	print("Sim")
if a1<1.37:
	print("Nao")
if a2<1.37:
	print("Nao")
print(max(a1,a2))
-- OUTPUT:
Nao
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:26:03) 
-- CODE:
a1= float(input("insira sua altura: "))
a2= float(input("insira a altura do amigo: "))
if (a1 or a2) >=1.37:
	print("Sim")
if a1 or a2 <1.37:
	print("Nao")
print(max(a1,a2))
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:26:18) 
-- CODE:
a1= float(input("insira sua altura: "))
a2= float(input("insira a altura do amigo: "))
if (a1 or a2) >=1.37:
	print("Sim")
if (a1 or a2) <1.37:
	print("Nao")
print(max(a1,a2))
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:26:26) 
-- CODE:
a1= float(input("insira sua altura: "))
a2= float(input("insira a altura do amigo: "))
if (a1 or a2) >=1.37:
	print("Sim")
if (a1 or a2) <1.37:
	print("Nao")
print(max(a1,a2))
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:26:35) 
-- CODE:
a1= float(input("insira sua altura: "))
a2= float(input("insira a altura do amigo: "))
if (a1 or a2) >=1.37:
	print("Sim")
if (a1 or a2) <1.37:
	print("Nao")
print(max(a1,a2))
-- EXECUTION TIME:
0.157144
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Nao
1.26
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
Nao
1.53
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Sim
1.9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:26:45) 
-- CODE:
a1= float(input("insira sua altura: "))
a2= float(input("insira a altura do amigo: "))
if (a1 or a2) >=1.37:
	print("Sim")
if (a1 or a2) <1.37:
	print("Nao")
print(max(a1,a2))
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:27:33) 
-- CODE:
a1= float(input("insira sua altura: "))
a2= float(input("insira a altura do amigo: "))
if (a1 or a2) >=1.37:
	print("Sim")
if (a1 or a2) <1.37:
	print("Nao")
print(max(a1,a2))
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:27:58) 
-- CODE:
a1= float(input("insira sua altura: "))
a2= float(input("insira a altura do amigo: "))
if (a1 or a2) >=1.37:
	print("Sim")
if (a1 and a2) <1.37:
	print("Nao")
print(max(a1,a2))
-- EXECUTION TIME:
0.137539
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Nao
1.26
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
1.53
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Sim
1.9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:28:00) 
-- CODE:
a1= float(input("insira sua altura: "))
a2= float(input("insira a altura do amigo: "))
if (a1 or a2) >=1.37:
	print("Sim")
if (a1 and a2) <1.37:
	print("Nao")
print(max(a1,a2))
-- EXECUTION TIME:
0.128623
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Nao
1.26
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
1.53
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Sim
1.9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:28:00) 
-- CODE:
a1= float(input("insira sua altura: "))
a2= float(input("insira a altura do amigo: "))
if (a1 or a2) >=1.37:
	print("Sim")
if (a1 and a2) <1.37:
	print("Nao")
print(max(a1,a2))
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:28:31) 
-- CODE:
a1= float(input("insira sua altura: "))
a2= float(input("insira a altura do amigo: "))
if (a1 or a2) >=1.37:
	print("Sim")
else:
	print("Nao")
print(max(a1,a2))
-- EXECUTION TIME:
0.14123
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Nao
1.26
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
Nao
1.53
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Sim
1.9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:28:33) 
-- CODE:
a1= float(input("insira sua altura: "))
a2= float(input("insira a altura do amigo: "))
if (a1 or a2) >=1.37:
	print("Sim")
else:
	print("Nao")
print(max(a1,a2))
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:28:34) 
-- CODE:
a1= float(input("insira sua altura: "))
a2= float(input("insira a altura do amigo: "))
if (a1 or a2) >=1.37:
	print("Sim")
else:
	print("Nao")
print(max(a1,a2))
-- EXECUTION TIME:
0.141273
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Nao
1.26
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
Nao
1.53
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Sim
1.9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:28:34) 
-- CODE:
a1= float(input("insira sua altura: "))
a2= float(input("insira a altura do amigo: "))
if (a1 or a2) >=1.37:
	print("Sim")
else:
	print("Nao")
print(max(a1,a2))
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:30:58) 
-- CODE:
a1= float(input("insira sua altura: "))
a2= float(input("insira a altura do amigo: "))
if (a1 or a2) >=1.37:
	print("Sim")
if a1 and a2 <1.37:
	print("Nao")
print(max(a1,a2))
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:31:44) 
-- CODE:
a1= float(input("insira sua altura: "))
a2= float(input("insira a altura do amigo: "))
if (a1 or a2) >=1.37:
	print("Sim")
if (a1 and a2)<1.37:
	print("Nao")
print(max(a1,a2))
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:32:14) 
-- CODE:
a1= float(input("insira sua altura: "))
a2= float(input("insira a altura do amigo: "))
if (a1 or a2) >=1.37:
	print("Sim")
if (a1 and a2)<1.37:
	print("Nao")
print(max(a1,a2))
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:33:33) 
-- CODE:
a1= float(input("insira sua altura: "))
a2= float(input("insira a altura do amigo: "))
if (a1 or a2) >=1.37:
	print("Sim")
	print(max(a1,a2))
if (a1 and a2)<1.37:
	print("Nao")
	print(max(a1,a2))
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:34:09) 
-- CODE:
a1= float(input("insira sua altura: "))
a2= float(input("insira a altura do amigo: "))
if (a1 or a2) >=1.37:
	print("Sim")
	print(max(a1,a2))
if (a1 and a2) <1.37:
	print("Nao")
	print(max(a1,a2))
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:34:36) 
-- CODE:
a1= float(input("insira sua altura: "))
a2= float(input("insira a altura do amigo: "))
if (a1 or a2) >=1.37:
	print("Sim")
	print(max(a1,a2))
if (a1 and a2) <1.37:
	print("Nao")
	print(max(a1,a2))
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:35:47) 
-- CODE:
a1= float(input("insira sua altura: "))
a2= float(input("insira a altura do amigo: "))
if (a1 or a2) >=1.37:
	print("Sim")
if (a1 and a2)<1.37:
	print("Nao")
print(max(a1,a2))
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:38:07) 
-- CODE:
a1= float(input("insira sua altura: "))
a2= float(input("insira a altura do amigo: "))
if (a1 or a2) >=1.37:
	print("Sim")
	print(max(a1,a2))

-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:38:16) 
-- CODE:
a1= float(input("insira sua altura: "))
a2= float(input("insira a altura do amigo: "))
if (a1 or a2) >=1.37:
	print("Sim")
	print(max(a1,a2))

-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:38:44) 
-- CODE:
a1= float(input("insira sua altura: "))
a2= float(input("insira a altura do amigo: "))
if (a1 or a2) >=1.37:
	print("Sim")
	print(max(a1,a2))
else:
	("Nao")

-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:38:57) 
-- CODE:
a1= float(input("insira sua altura: "))
a2= float(input("insira a altura do amigo: "))
if (a1 or a2) >=1.37:
	print("Sim")
	print(max(a1,a2))


-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:41:50) 
-- CODE:
a1= float(input("insira sua altura: "))
a2= float(input("insira a altura do amigo: "))
if a1>=1.37 or a2>=1.37:
	print("Sim")
	print(max(a1,a2))
if a1<1.37 and a2<1.37:
	prin("Nao")
	print(max(a1,a2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    prin("Nao")
NameError: name 'prin' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:42:00) 
-- CODE:
a1= float(input("insira sua altura: "))
a2= float(input("insira a altura do amigo: "))
if a1>=1.37 or a2>=1.37:
	print("Sim")
	print(max(a1,a2))
if a1<1.37 and a2<1.37:
	prin("Nao")
	print(max(a1,a2))
-- EXECUTION TIME:
0.20343
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1664/2967/main.py", line 7, in <module>
    prin("Nao")
NameError: name 'prin' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:42:03) 
-- CODE:
a1= float(input("insira sua altura: "))
a2= float(input("insira a altura do amigo: "))
if a1>=1.37 or a2>=1.37:
	print("Sim")
	print(max(a1,a2))
if a1<1.37 and a2<1.37:
	prin("Nao")
	print(max(a1,a2))
-- EXECUTION TIME:
0.223068
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1664/2967/main.py", line 7, in <module>
    prin("Nao")
NameError: name 'prin' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:42:04) 
-- CODE:
a1= float(input("insira sua altura: "))
a2= float(input("insira a altura do amigo: "))
if a1>=1.37 or a2>=1.37:
	print("Sim")
	print(max(a1,a2))
if a1<1.37 and a2<1.37:
	prin("Nao")
	print(max(a1,a2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    prin("Nao")
NameError: name 'prin' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:42:12) 
-- CODE:
a1= float(input("insira sua altura: "))
a2= float(input("insira a altura do amigo: "))
if a1>=1.37 or a2>=1.37:
	print("Sim")
	print(max(a1,a2))
if a1<1.37 and a2<1.37:
	prin("Nao")
	print(max(a1,a2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    prin("Nao")
NameError: name 'prin' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:42:34) 
-- CODE:
a1= float(input("insira sua altura: "))
a2= float(input("insira a altura do amigo: "))
if a1>=1.37 or a2>=1.37:
	print("Sim")
	print(max(a1,a2))
if a1<1.37 and a2<1.37:
	print("Nao")
	print(max(a1,a2))
-- EXECUTION TIME:
0.144696
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Nao
1.26
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
Sim
1.53
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Sim
1.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
